[workspace]
members = ["namewise", "namewise-derive", "namewise-common", "namewise-tests"]

[workspace.dependencies]
darling = "0"
derive_more = "0"
itertools = "0"
proc-macro2 = "1"
quote = "1"
syn = "1"
thiserror = "1"
namewise-derive = { path = "namewise-derive" }
namewise-common = { path = "namewise-common" }
namewise = { path = "namewise" }
