[package]
name = "fieldwise"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/amrhassan/fieldwise-rs"
homepage = "https://github.com/amrhassan/fieldwise-rs"
license = "MIT"
description = "Derived field-wise conversions for Rust structs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10"
