[package]
name = "namewise-common"
version = "2.4.0"
edition = "2021"
repository = "https://github.com/amrhassan/namewise-rs"
homepage = "https://github.com/amrhassan/namewise-rs"
license = "MIT"
description = "Derived trivial name-wise conversions for Rust types"

[dependencies]
derive_more = { version = "0" }
thiserror = "1"
