[package]
name = "namewise-derive"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/amrhassan/namewise-rs"
homepage = "https://github.com/amrhassan/fieldwise-rs"
license = "MIT"
description = "Derived trivial name-wise conversions for Rust types"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = "1"
itertools = "0"
proc-macro2 = "1"
darling = "0"
