[package]
name = "namewise-derive"
version = "2.6.2"
edition = "2021"
repository = "https://github.com/amrhassan/namewise-rs"
homepage = "https://github.com/amrhassan/fieldwise-rs"
license = "MIT"
description = "Derived trivial name-wise conversions for Rust types"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits", "parsing"] }
quote = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
