[package]
name = "namewise"
version = "2.6.1"
edition = "2021"
repository = "https://github.com/amrhassan/namewise-rs"
homepage = "https://github.com/amrhassan/namewise-rs"
license = "MIT"
description = "Derived trivial name-wise conversions for Rust types"

[dependencies]
namewise-derive = { path = "../namewise-derive", version = "2.6.1" }
namewise-common = { path = "../namewise-common", version = "2.6.1" }
