[package]
name = "namewise"
version = "2.6.2"
edition = "2021"
repository = "https://github.com/amrhassan/namewise-rs"
homepage = "https://github.com/amrhassan/namewise-rs"
license = "MIT"
description = "Derived trivial name-wise conversions for Rust types"

[dependencies]
namewise-derive = { workspace = true }
namewise-common = { workspace = true }
